2.0.0b10
 - fix: fluorescence label for y axis not updated with custom value
 - fix: fluorescence label of colorbar not updated with custom value 
 - fix: set correct plotting range in log mode
 - fix: always normalize density for KDE plots
 - enh: add one-color-colormaps for labeling
2.0.0b9
 - try to figure out #29
2.0.0b8
 - feat: automatically set parameters for Young's modulus computation
2.0.0b7
 - fix: try to disable close buttons of MDI subwindows on macOS (#29)
 - fix: allow Shift+click on plot matrix element
 - fix: support temperature key (dclab 0.19.1.post2)
2.0.0b6
 - ref: move custom widgets to separate submodule (#24)
 - fix: bad alignment when selecting "Plot" in QuickView (#31)
2.0.0b5
 - fix: correctly handle empty plots (#27)
 - fix: version check checked against version 1 (#30)
 - fix: QuickView window resize incorrect (partly #31)
2.0.0b4
 - feat: add automated update checker
 - feat: show basic statistics in QuickView (#13)
 - fix: modifying a polygon filter did not update the plots (#26)
 - ref: refactor BlockMatrix (#10)
2.0.0b3
 - enh: introduce FilterRay class for caching of hierarchy data (#6)
 - fix: minor plot updating issues
 - fix: QuickView issues when removing datasets (#25)
2.0.0b2
 - feat: support loading sessions with missing dataset paths (#5)
 - fix: don't use area_um, deform, and bright_avg box filters by
   default (#19)
 - fix: bug+regression when removing plots (#21)
 - fix: `Pipeline.get_min_max` did not take into account final
   filter set in filter ray (#22)
 - fix: do not set the selected filter to the current QuickView
   filter when hitting apply in the analysis view filter panel (#18)
 - fix: remove references to files if they are not needed anymore (#17)
 - enh: include (polygon) filter names in file names when
   exporting filters (#20)
2.0.0b1
 - feat: automatically rescale plot windows (#8)
 - feat: add auto XY-range checkbox for plotting (#9)
 - feat: allow to choose filter ray when computing statistics for