@@ -5,3 +5,4 @@ def pytest_configure(config):
     """This is ran before all tests"""
     # disable update checking
     settings.SettingsFile().set_bool("check update", False)
+    settings.SettingsFile().set_bool("check pgversion", False)
