@@ -3,6 +3,9 @@
  - fix: fluorescence label of colorbar not updated with custom value 
  - fix: set correct plotting range in log mode
  - fix: always normalize density for KDE plots
+ - fix: plots sometimes loaded in wrong order into session
+ - enh: pretty-pring log scale axes tick labels
+   (https://github.com/pyqtgraph/pyqtgraph/pull/1097)
  - enh: add one-color-colormaps for labeling
 2.0.0b9
  - try to figure out #29
